tests/cases/smoke/valid/nested_read_only_capture.dp
const BASE = 10
func add(x: int, y: int) -> int {
    return x + y
}
var result = add(BASE, 5)
