tests/cases/smoke/invalid/control_unreachable_after_return.dp
func add(a: int, b: int) -> int {
    return a + b
    print("never")
}
